// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Displays loading text while prescription data is being requested 1`] = `
"<div style="text-align: center;">
  <h1 class="nhsuk-label-wrapper"><label class="nhsuk-label nhsuk-label--xl sc-gLDzan fnXRyb">Loading</label></h1>
  <div class="nhsuk-loader"><span class="nhsuk-loader__spinner"></span><span class="nhsuk-loader__text">Retrieving prescription details.</span></div>
</div>"
`;

exports[`Displays loading text while prescription is being sent 1`] = `
"<div style="text-align: center;">
  <h1 class="nhsuk-label-wrapper"><label class="nhsuk-label nhsuk-label--xl sc-gLDzan fnXRyb">Loading</label></h1>
  <div class="nhsuk-loader"><span class="nhsuk-loader__spinner"></span><span class="nhsuk-loader__text">Sending signature request.</span></div>
</div>"
`;

exports[`Displays prescription summary if prescription details are retrieved successfully 1`] = `
"<form>
  <h1 class="nhsuk-label-wrapper"><label class="nhsuk-label nhsuk-label--xl"><span>Prescription Summary</span>
      <figure class="nhsuk-image"><img class="nhsuk-image__img sc-hLseeU jvNVTN" id="editPrescription" srcset="baseUrl/static/BlackTie_Bold_full_set_Pencil_SVG_Blue.svg" sizes="50px"></figure>
    </label></h1>
  <div class="sc-dmqHEX exmKrI"><button class="nhsuk-button" aria-disabled="false" type="button">Download this Prescription</button></div>
  <dl class="nhsuk-summary-list">
    <div class="nhsuk-summary-list__row">
      <dt class="nhsuk-summary-list__key">ID</dt>
      <dd class="nhsuk-summary-list__value">B407F7-A99968-4DB2AU</dd>
    </div>
    <div class="nhsuk-summary-list__row">
      <dt class="nhsuk-summary-list__key">Prescription Type Code</dt>
      <dd class="nhsuk-summary-list__value">1001</dd>
    </div>
    <div class="nhsuk-summary-list__row">
      <dt class="nhsuk-summary-list__key">Course Of Therapy</dt>
      <dd class="nhsuk-summary-list__value">Continuous long term (repeat dispensing)</dd>
    </div>
    <div class="nhsuk-summary-list__row">
      <dt class="nhsuk-summary-list__key">Issue Number</dt>
      <dd class="nhsuk-summary-list__value">1 of 6</dd>
    </div>
    <div class="nhsuk-summary-list__row">
      <dt class="nhsuk-summary-list__key">Authored On</dt>
      <dd class="nhsuk-summary-list__value">13-Nov-2021</dd>
    </div>
    <div class="nhsuk-summary-list__row">
      <dt class="nhsuk-summary-list__key">Effective Date</dt>
      <dd class="nhsuk-summary-list__value">03-Sep-2021</dd>
    </div>
    <div class="nhsuk-summary-list__row">
      <dt class="nhsuk-summary-list__key">Nominated Pharmacy ODS Code</dt>
      <dd class="nhsuk-summary-list__value">FER21</dd>
    </div>
    <div class="nhsuk-summary-list__row">
      <dt class="nhsuk-summary-list__key">Nominated Pharmacy Type</dt>
      <dd class="nhsuk-summary-list__value">Other (e.g. Community Pharmacy)</dd>
    </div>
  </dl><label class="nhsuk-label nhsuk-label--m">Patient</label>
  <dl class="nhsuk-summary-list">
    <div class="nhsuk-summary-list__row">
      <dt class="nhsuk-summary-list__key">Name</dt>
      <dd class="nhsuk-summary-list__value">CORY, ETTA (MISS)</dd>
    </div>
    <div class="nhsuk-summary-list__row">
      <dt class="nhsuk-summary-list__key">NHS Number</dt>
      <dd class="nhsuk-summary-list__value">944 930 5552</dd>
    </div>
    <div class="nhsuk-summary-list__row">
      <dt class="nhsuk-summary-list__key">Date of Birth</dt>
      <dd class="nhsuk-summary-list__value">04-Jan-1999</dd>
    </div>
    <div class="nhsuk-summary-list__row">
      <dt class="nhsuk-summary-list__key">Gender</dt>
      <dd class="nhsuk-summary-list__value">Female</dd>
    </div>
    <div class="nhsuk-summary-list__row">
      <dt class="nhsuk-summary-list__key">Address</dt>
      <dd class="nhsuk-summary-list__value">123 Dale Avenue<br>Long Eaton<br>Nottingham<br>NG10 1NP</dd>
    </div>
  </dl>
  <div class="nhsuk-table__panel-with-heading-tab">
    <h3 class="nhsuk-table__heading-tab">Medication</h3>
    <table class="nhsuk-table">
      <caption class="nhsuk-table__caption">Medication summary</caption>
      <thead class="nhsuk-table__head">
        <tr class="nhsuk-table__row">
          <th class="nhsuk-table__header" scope="col">Details</th>
          <th class="nhsuk-table__header" scope="col">Quantity</th>
          <th class="nhsuk-table__header" scope="col">Unit</th>
          <th class="nhsuk-table__header" scope="col">Dosage Instructions</th>
        </tr>
      </thead>
      <tbody class="nhsuk-table__body">
        <tr class="nhsuk-table__row">
          <td class="nhsuk-table__cell">
            <div><b>Methotrexate 10mg/0.2ml solution for injection pre-filled syringes</b></div>
          </td>
          <td class="nhsuk-table__cell">63</td>
          <td class="nhsuk-table__cell">tablet</td>
          <td class="nhsuk-table__cell">
            <div>10 milligram, Inject, Subcutaneous route, once weekly</div>
          </td>
        </tr>
      </tbody>
    </table>
  </div><label class="nhsuk-label nhsuk-label--m">Prescriber</label>
  <dl class="nhsuk-summary-list">
    <div class="nhsuk-summary-list__row">
      <dt class="nhsuk-summary-list__key">Name</dt>
      <dd class="nhsuk-summary-list__value">EDWARDS, Thomas (DR)</dd>
    </div>
    <div class="nhsuk-summary-list__row">
      <dt class="nhsuk-summary-list__key">Professional Codes</dt>
      <dd class="nhsuk-summary-list__value">SDS Role Profile ID - 100102238986<br>Spurious Code - 612345<br>SDS User ID - 3415870201<br>GMC Number - 4428981</dd>
    </div>
    <div class="nhsuk-summary-list__row">
      <dt class="nhsuk-summary-list__key">Telecom</dt>
      <dd class="nhsuk-summary-list__value">01234567890</dd>
    </div>
    <div class="nhsuk-summary-list__row">
      <dt class="nhsuk-summary-list__key">Organization</dt>
      <dd class="nhsuk-summary-list__value">SOMERSET BOWEL CANCER SCREENING CENTRE (A99968)</dd>
    </div>
    <div class="nhsuk-summary-list__row">
      <dt class="nhsuk-summary-list__key">Address</dt>
      <dd class="nhsuk-summary-list__value">MUSGROVE PARK HOSPITAL<br>TAUNTON<br>TA1 5DA</dd>
    </div>
    <div class="nhsuk-summary-list__row">
      <dt class="nhsuk-summary-list__key">Trust / CCG</dt>
      <dd class="nhsuk-summary-list__value">TAUNTON AND SOMERSET NHS FOUNDATION TRUST (RBA)</dd>
    </div>
  </dl>
  <div class="sc-dmqHEX exmKrI"><button class="nhsuk-button" aria-disabled="false" type="submit">Sign &amp; Send</button><button class="nhsuk-button nhsuk-button--secondary" aria-disabled="false" type="button">Back</button></div>
</form>"
`;
